@@ -86,6 +86,7 @@ LIBRPMDB_0
     rpmAddSignature;
     rpmCheckPassPhrase;
     rpmDatabasePoptTable;
+    _rpmdbPool;
     rpmdbAdd;
     rpmdbAppendIterator;
     rpmDBArgs;
@@ -171,8 +172,6 @@ LIBRPMDB_0
     tagType;
     tagTypeValidate;
     tagValue;
-    XrpmdbLink;
-    XrpmdbUnlink;
   local:
     *;
 };
